# kaipule_hpc

./: .gitignore  LICENSE  README.md  ssh.exe.stackdump
01DeviceInfo/: CMakeLists.txt  README.md  main.cpp
01HelloCuda/: CMakeLists.txt  README.md  build.bat  build.sh  main.cu
02DeviceInfo/: CMakeLists.txt  README.md  main.cu
03Sample/: CMakeLists.txt  build.bat  main.cu
03Sample/inc/: sobel_grad.cl
15PTX/: README.md
base/: CMakeLists.txt  build.sh
base/inc/: CL_add.cl
base/src/: main01.cpp  main02.cpp  main03.cpp  main04.cpp  main05.cpp
base/warpper/opencl/: cl_get_platform.cpp  cl_get_platform.h  cl_library.cpp  debug_print.h  dlfcn.c  get_time.h
sample/: CMakeLists.txt
sample/src/: main01.cpp
sobel_grad/: CMakeLists.txt  README.md  build.sh
sobel_grad/example/: main.cpp  main02.cpp
sobel_grad/src/: sobel_grad.cl  sobel_grad.cpp
